name:                nats
version:             0.1.0.1
-- synopsis:
-- description:
homepage:            https://github.com/forestbelton/nats#readme
license:             BSD3
license-file:        LICENSE
author:              Forest Belton
maintainer:          forest@homolo.gy
copyright:           2017 Forest Belton
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite nats-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nats
                     , hspec >= 2.4.4 && < 3.0
                     , QuickCheck >= 2.9.2 && < 3.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/forestbelton/nats
